--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
-    <!--<link rel="stylesheet" href="css/bootstrap-social.css">-->
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="css/gijgo.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/slicknav.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+    <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -239,12 +239,14 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-12">
+                    <div class="col-xl-12" style="-webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
+                    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
+                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);padding-top: 10px;">
                         <div class="gallery_active owl-carousel">
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/acconciatura sposa.jpg" alt="">
-                                    <p>Acconciatura sposa</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Acconciatura sposa</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/acconciatura sposa.jpg">
@@ -256,7 +258,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/light blonde.jpg" alt="">
-                                    <p>Light Blonde</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Light Blonde</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/light blonde.jpg">
                                             <i class="ti-plus"></i>
@@ -267,7 +269,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/velature bionde.jpg" alt="">
-                                    <p>Velature bionde</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Velature bionde</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/velature bionde.jpg">
                                             <i class="ti-plus"></i>
@@ -278,7 +280,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/biondo caldo.jpg" alt="">
-                                    <p>Biondo caldo</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Biondo caldo</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/biondo caldo.jpg">
@@ -290,7 +292,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/pastello.jpg" alt="">
-                                    <p>Pastello</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Pastello</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/pastello.jpg">
@@ -302,7 +304,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/platino.jpg" alt="">
-                                    <p>Platino</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Platino</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/platino.jpg">
@@ -314,7 +316,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/cioccolato.jpg" alt="">
-                                    <p>Cioccolato</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Cioccolato</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/cioccolato.jpg">
@@ -326,7 +328,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/gianduia.jpg" alt="">
-                                    <p>Gianduia</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Gianduia</p>
                                     <div class="image_hover">
                                         <a class="popup-image"
                                             href="img/gallery/gianduia.jpg">
@@ -338,7 +340,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/red.jpg" alt="">
-                                    <p>Red</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Red</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/red.jpg">
                                             <i class="ti-plus"></i>
@@ -349,7 +351,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/bob.jpg" alt="">
-                                    <p>Bob</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Bob</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/bob.jpg">
                                             <i class="ti-plus"></i>
@@ -360,7 +362,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/contrasti.jpg" alt="">
-                                    <p>Contrasti</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Contrasti</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/contrasti.jpg">
                                             <i class="ti-plus"></i>
@@ -371,7 +373,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/sfumando.jpg" alt="">
-                                    <p>Sfumando</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Sfumando</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/sfumando.jpg">
                                             <i class="ti-plus"></i>
@@ -382,7 +384,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/stravaganze.jpg" alt="">
-                                    <p>Stravaganze</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Stravaganze</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/stravaganze.jpg">
                                             <i class="ti-plus"></i>
@@ -393,7 +395,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/stravaganze2.jpg" alt="">
-                                    <p>Stravaganze</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Stravaganze</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/stravaganze2.jpg">
                                             <i class="ti-plus"></i>
@@ -404,7 +406,7 @@
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/gallery/semi raccolto.jpg" alt="">
-                                    <p>Semi raccolto</p>
+                                    <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Semi raccolto</p>
                                     <div class="image_hover">
                                         <a class="popup-image" href="img/gallery/semi raccolto.jpg">
                                             <i class="ti-plus"></i>
@@ -454,9 +456,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-12">
+                    <div class="col-xl-12" style="-webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
+                    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
+                    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);padding-top: 10px;">
                         <div class="gallery_active owl-carousel">
-                            <div class="single_gallery">
+                            <!-- <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/Products/Linea  Shampoo luminescina Haircompany.jpg" alt="">
                                     <div class="image_hover">
@@ -466,9 +470,9 @@
                                         </a>
                                     </div>
                                 </div>
-                                <h2>Shampoo luminescina Haircompany</h2>
-                                <p><a style="display:block;color: #300033;" href="https://www.myhaircompany.it/en/prodotto/shampoo-illuminante/">Leggi la descrizione</a></p>
-                            </div>
+                                <h2 >Shampoo luminescina Haircompany</h2>
+                                <p><a style="display:block;color: #300033;" class=""href="https://www.myhaircompany.it/en/prodotto/shampoo-illuminante/">Leggi la descrizione</a></p>
+                            </div> -->
                             <div class="single_gallery">
                                 <div class="thumb">
                                     <img src="img/Products/Maschera Anticrescpo Haircompany.jpg" alt="">
@@ -480,7 +484,7 @@
                                     </div>
                                 </div>
                                 <h2>Maschera Anticrescpo Haircompany</h2>
-                                <p>MASCHERA ANTICRESPO  HAIR FRIZZ STOPPER MASK 
+                                <p style="font-size: 18px;color:#300033;font-family:Playfair Display;">MASCHERA ANTICRESPO  HAIR FRIZZ STOPPER MASK 
 
                                     Maschera Hair Frizz Stopper
                                     
@@ -508,7 +512,11 @@
                                     </div>
                                 </div>
                                 <h2>Redken all soft vegan</h2>
-                                <p><a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-all-soft-conditioner">Leggi la descrizione</a></p>
+                                <p style="font-size: 18px;color:#300033;font-family:Playfair Display;">
+                                    Conditioner idratante con formula vegana a base di linfa di betulla, dona morbidezza e condizionamento, dando ai capelli un aspetto più sano. Adatto a capelli secchi. 
+
+                                    Idrata e dona morbidezza. Rende i capelli più condizionati, per un aspetto più sano.</p>
+                                <!-- <a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-all-soft-conditioner">Leggi la descrizione</a> -->
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
@@ -521,7 +529,11 @@
                                     </div>
                                 </div>
                                 <h2>Redken color extend vegan</h2>
-                                <p><a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-color-extend-shampoo">Leggi la descrizione</a></p>
+                                <p style="font-size: 18px;color:#300033;font-family:Playfair Display;">
+                                    Shampoo per capelli colorati con formula vegana a base di ginseng, mantiene e prolunga l'effetto del colore sui capelli, donando loro brillantezza. Adatto a capelli colorati.
+
+                                    Mantiene ed evidenzia il colore dei capelli rendendolo più vibrante e donando maggiore brillantezza.</p>
+                                <!-- <a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-color-extend-shampoo">Leggi la descrizione</a> -->
                             </div>
                             <div class="single_gallery">
                                 <div class="thumb">
@@ -534,11 +546,15 @@
                                     </div>
                                 </div>
                                 <h2>Redken extreme vegan</h2>
-                                <p><a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-extreme-shampoo">Leggi la descrizione</a></p>
+                                <p  style="font-size: 18px;color:#300033;font-family:Playfair Display;">
+                                    Shampoo riparatore con formula vegana a base di lupini, dona forza ai capelli e aiuta a prevenire le rotture e le doppie punte. Adatto a capelli danneggiati. 
+
+                                    Fortifica i capelli. Aiuta a prevenire le rotture e le doppie punte.</p>
+                                <!-- <a style="display:block;color: #300033;" href="https://www.redken.it/prodotti/hair-care/nature-science/nature-science-extreme-shampoo">Leggi la descrizione</a> -->
                             </div>
                         </div>
                         <div class="d-inline-block " >
-                            <a href="https://www.ebay.it/usr/satisfaction_39?_trksid=p2047675.l2559" class="boxed-btn3" style="padding: 20px;" >Acquista ora</a>
+                            <a href="https://www.ebay.it/usr/satisfaction_39?_trksid=p2047675.l2559" class="boxed-btn3" style="padding: 20px;margin-bottom: 10px;" >Acquista ora</a>
                         </div>
                     </div>
                 </div>
