--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                        <!-- <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="book_room">
                                 <div class="book_btn d-none d-lg-block">
                                     <a  href="https://www.instagram.com/satisfactionhairdesigner/">Richiedi appuntamento</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -203,12 +203,12 @@
                                         <p style="font-size: 18px;color:#300033;font-family:Playfair Display ;">*  Comprende piega specifica.</p>
                                         <p style="font-size: 18px;color:#300033;font-family:Playfair Display ;">** Comprende piega specifica e Tonalizzante. </p>
                                     </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
+    </div>
 
     <!-- gallery_area_start -->
     <section id="gallery">
