--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                                 <h3>Orario <br>d'apertura</h3>
                                 <p style="color: black;font-weight:bold">Mar-Sab (8.00-19.30)</p>
                                 <!--something after br -->
-                        </div>
+                            </div>
                     </div>
+                </div>
                 </div>
                 <div style="margin-top: 2cm;" class="col-xl-6 col-lg-6">
                     <div class="about_info">
@@ -231,8 +232,7 @@
                                     <img src="img/gallery/acconciatura sposa.jpg" alt="Acconciatura sposa">
                                     <p style="font-size: 18px;color:#300033;font-family:Playfair Display;font-size: 30px;padding: 5px;">Acconciatura sposa</p>
                                     <div class="image_hover">
-                                        <a class="popup-image"
-                                            href="img/gallery/acconciatura sposa.jpg">
+                                        <a class="popup-image" href="img/gallery/acconciatura sposa.jpg">
                                             <i class="ti-plus"></i>
                                         </a>
                                     </div>
