--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                             <div class="card bg-light ">
                             <div class="card-header" id="headingOne">
                                 <h5 class="mb-0">
-                                <a class="pointer" type="text" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: white;display: block;">
+                                <a class="pointer" href="#" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: white;display: block;">
                                     È possibile servirsi senza appuntamento? 
                                 </a>
                                 </h5>
@@ -142,7 +142,7 @@
                             <div class="card bg-light">
                                 <div class="card-header" id="headingTwo">
                                 <h5 class="mb-0">
-                                    <a class="pointer" type="text"data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: white;display: block;">
+                                    <a class="pointer" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: white;display: block;">
                                         Effettui orario continuato ogni giorno?
                                     </a>
                                 </h5>
@@ -157,7 +157,7 @@
                             <div class="card bg-light">
                                 <div class="card-header" id="headingThree">
                                 <h5 class="mb-0">
-                                    <a class="pointer" type="text" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" style="color: white;display: block;">
+                                    <a class="pointer" href="#" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" style="color: white;display: block;">
                                         Utilizzi prodotti bio?
                                     </a>
                                 </h5>
@@ -172,7 +172,7 @@
                             <div class="card bg-light">
                                 <div class="card-header" id="headingFour">
                                 <h5 class="mb-0">
-                                    <a class="pointer" type="text" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" style="color: white;display: block;">
+                                    <a class="pointer"  href="#" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" style="color: white;display: block;">
                                         Utilizzi colori senza ammoniaca?
                                     </a>
                                 </h5>
@@ -187,7 +187,7 @@
                             <div class="card bg-light">
                                 <div class="card-header" id="headingFive">
                                 <h5 class="mb-0">
-                                    <a class="pointer" type="text" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive" style="color: white;display: block;">
+                                    <a class="pointer" href="#" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive" style="color: white;display: block;">
                                         È un parrucchiere anche maschile?
                                     </a>
                                 </h5>
@@ -202,7 +202,7 @@
                             <div class="card bg-light">
                                 <div class="card-header" id="headingSix">
                                 <h5 class="mb-0">
-                                    <a class="pointer" type="text" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix" style="color: white;display: block;">
+                                    <a class="pointer" href="#" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix" style="color: white;display: block;">
                                         È presente l'ingresso per disabili?
                                     </a>
                                 </h5>
