--- a/contact.html
+++ b/contact.html
@@ -191,83 +191,72 @@
     <!-- ================ contact section end ================= -->
     
 <!-- footer -->
-<div class="container-fluid pt-80">
-    <footer class="footer ">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Contattami
-                            </h3>
-                            <p class="footer_text doanar"> <a class="first" href="https://www.instagram.com/satisfactionhairdesigner/">Richiedi un appuntamento</a> <br>
-                                <a>3807970350</a></p>
-
-                        </div>
+<footer class="footer ">
+    <div class="footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-md-6 col-lg-3">
+                    <div class="footer_widget">
+                        <h3 class="footer_title">
+                            Contattami
+                        </h3>
+                        <p class="footer_text doanar"> <a class="first"
+                                href="https://www.instagram.com/satisfactionhairdesigner/">Richiedi un
+                                appuntamento</a> <br>
+                            <a>3807970350</a></p>
                     </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Info
-                            </h3>
-                            <p class="footer_text">Via Guglielmo Oberdan, 7 <br>
-                                Andria<br>
-                                <a class="domain">satisfactionhairdesigner@hotmail.it</a></p>
-                        </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-3">
+                    <div class="footer_widget">
+                        <h3 class="footer_title">
+                            Info
+                        </h3>
+                        <p class="footer_text">Via Guglielmo Oberdan, 7 <br>
+                            Andria<br>
+                            <a class="domain">satisfactionhairdesigner@hotmail.it</a></p>
                     </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Naviga
-                            </h3>
+                </div>
+                <div class="col-xl-2 col-md-6 col-lg-2">
+                    <div class="footer_widget" style="margin-left: 30px;">
+                        <h3 class="footer_title">
+                            Naviga
+                        </h3>
+                        <ul>
+                            <li><a class="active" href="index.html">Home</a></li>
+                            <li><a href="index.html#gallery">Galleria</a></li>
+                            <li><a href="index.html#service">Servizi</a></li>
+                            <li><a href="contact.html#map">Dove siamo </a></li>
+                            <li><a href="index.html#products">Prodotti </a></li>
+                            <li><a href="contact.html">Contatti</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-lg-4">
+                    <div class="footer_widget">
+                        <h3 class="footer_title pl-5">
+                            Social area
+                        </h3>
+                        <div class="socail_links">
                             <ul>
-                                <li><a class="active" href="index.html">Home</a></li>
-                                <li><a href="index.html#gallery">Galleria</a></li>
-                                <li><a href="index.html#service">Servizi</a></li>
-                                <li><a href="contact.html#map">Dove siamo </a></li>
-                                <li><a href="index.html#products">Prodotti </a></li>
-                                <li><a href="contact.html">Contatti</a></li>
+                                <li>
+                                    <a href="https://business.facebook.com/SatisfactionHairDesigner/">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/satisfactionhairdesigner/">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-md-6 col-lg-4">
-                        <div class="footer_widget">
-                            <h3 class="footer_title pl-5">
-                                Social area
-                            </h3>
-                            <div class="socail_links">
-                                <ul>
-                                    <li>
-                                        <a href="https://business.facebook.com/SatisfactionHairDesigner/">
-                                            <i class="fa fa-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://www.instagram.com/satisfactionhairdesigner/">
-                                            <i class="fa fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                                <!-- copyrights -->
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    </div>
+</footer>
+<!-- footer -->
 </div>
     <!-- bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
