--- a/index.html
+++ b/index.html
@@ -565,7 +565,6 @@
 
 
     <!-- footer -->
-    <div class="container-fluid pt-80">
         <footer class="footer ">
             <div class="footer_top">
                 <div class="container">
@@ -579,7 +578,6 @@
                                         href="https://www.instagram.com/satisfactionhairdesigner/">Richiedi un
                                         appuntamento</a> <br>
                                     <a>3807970350</a></p>
-
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6 col-lg-3">
@@ -593,7 +591,7 @@
                             </div>
                         </div>
                         <div class="col-xl-2 col-md-6 col-lg-2">
-                            <div class="footer_widget">
+                            <div class="footer_widget" style="margin-left: 30px;">
                                 <h3 class="footer_title">
                                     Naviga
                                 </h3>
@@ -632,7 +630,6 @@
                 </div>
             </div>
         </footer>
-    </div>
 
     <!-- bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
